deploy/apps/jellyfin/jellyfin-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        imagePullPolicy: Always
        ports:
        - containerPort: 8096
          name: http-tcp
          protocol: TCP
        # - containerPort: 8920
        #   name: https-tcp
        #   protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: media
          mountPath: /data
        - name: jellyfin-cache
          mountPath: /cache
        resources:
          requests:
            memory: "512Mi"
            cpu: "2"
          limits:
            memory: "2Gi"
            cpu: "3.5"
        stdin: true
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: media-shared
      - name: jellyfin-cache
        emptyDir:
          sizeLimit: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8096
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.burglarr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-service
            port:
              number: 80
